ci(.gitignore): included plots and lhotse files from notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@ checkpoints
 
 # commitizen config
 *pyproject.toml
+
+# Lhotse files from notebooks
+notebooks/manifests/
+notebooks/test_dev_feats/
+notebooks/tmp
+
+# Output plots
+plots
+
+# Lhotse files for demo-notebook
+.demo-feats
